radeon: fix crash in drmmode_create_bo_pixmap()

Only init surface on r6xx+.  Return NULL rather than
FALSE.

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=45829

Signed-off-by: Alex Deucher <alexdeucher@gmail.com>